syntax = "proto3";
package leo.example.path.v1;
option go_package = "github.com/go-leo/leo/example/api/path/v1;path";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

service Path {
  rpc BoolPath (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{bool}/{opt_bool}/{wrap_bool}"
    };
  }

  rpc Int32Path (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{int32}/{sint32}/{sfixed32}/{opt_int32}/{opt_sint32}/{opt_sfixed32}/{wrap_int32}"
    };
  }

  rpc Int64Path (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{int64}/{sint64}/{sfixed64}/{opt_int64}/{opt_sint64}/{opt_sfixed64}/{wrap_int64}"
    };
  }

  rpc Uint32Path (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{uint32}/{fixed32}/{opt_uint32}/{opt_fixed32}/{wrap_uint32}"
    };
  }

  rpc Uint64Path (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{uint64}/{fixed64}/{opt_uint64}/{opt_fixed64}/{wrap_uint64}"
    };
  }

  rpc FloatPath (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{float}/{opt_float}/{wrap_float}"
    };
  }

  rpc DoublePath (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{double}/{opt_double}/{wrap_double}"
    };
  }

  rpc StringPath (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{string}/{opt_string}/{wrap_string}"
    };
  }

  rpc EnumPath (PathRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/{status}/{opt_status}"
    };
  }

}

message PathRequest {
  bool bool = 2;
  optional bool opt_bool = 22;
  google.protobuf.BoolValue wrap_bool = 48;

  int32 int32 = 3;
  sint32 sint32 = 4;
  sfixed32 sfixed32 = 10;
  optional int32 opt_int32 = 23;
  optional sint32 opt_sint32 = 24;
  optional sfixed32 opt_sfixed32 = 30;
  google.protobuf.Int32Value wrap_int32 = 46;

  int64 int64 = 7;
  sint64 sint64 = 8;
  sfixed64 sfixed64 = 13;
  optional int64 opt_int64 = 27;
  optional sint64 opt_sint64 = 28;
  optional sfixed64 opt_sfixed64 = 33;
  google.protobuf.Int64Value wrap_int64 = 44;

  uint32 uint32 = 6;
  fixed32 fixed32 = 11;
  optional uint32 opt_uint32 = 26;
  optional fixed32 opt_fixed32 = 31;
  google.protobuf.UInt32Value wrap_uint32 = 47;

  uint64 uint64 = 9;
  fixed64 fixed64 = 14;
  optional uint64 opt_uint64 = 29;
  optional fixed64 opt_fixed64 = 34;
  google.protobuf.UInt64Value wrap_uint64 = 45;

  float float = 12;
  optional float opt_float = 32;
  google.protobuf.FloatValue wrap_float = 43;

  double double = 15;
  optional double  opt_double = 35;
  google.protobuf.DoubleValue wrap_double = 42;

  string string = 16;
  optional string opt_string = 36;
  google.protobuf.StringValue wrap_string = 49;

  enum Status {
    UNKNOWN = 0;
    OK = 1;
    CANCELLED = 2;
    UNKNOWN_ERROR = 3;
  }
  Status status = 68;
  optional Status opt_status = 69;

}

